# C-language-code

hw0/: outfile
hw1/: outfile
hw1/include/: transplant.h
hw1/src/: main.c  transplant.c
hw2/helplib/: addhelp
hw2/include/: choices.h  datadef.h
hw2/include/toolsdir/: args.h  ctools.h  menu.h
hw2/src/: clear.c  io.c  menuaux.c  operations.c  options.c  rlist.c  rolo.c  search.c  update.c
hw2/src/toolsdir/: args.c  ctools.c  mem.c  menu.c
hw2/tests/: base_tests.c
hw3/: CMakeLists.txt
hw3/src/: sfmm.c
hw3/tests/: sfmm_tests.c
hw4/: CMakeLists.txt
hw4/include/: helper.h  jobber.h
hw4/src/: helper.c  jobs.c  main.c
hw5/: valgrind.out
hw5/include/: csapp.h  trader.h
hw5/src/: client_registry.c  exchange.c  main.c  protocol.c  server.c  trader.c
